syntax = "proto3";
package user;

option go_package = "CodeMart/proto/user;userpb";

service UserService {
  rpc Register (RegisterRequest) returns (UserResponse);
  rpc Login (LoginRequest) returns (UserResponse);
  rpc GetUser (UserIdRequest) returns (UserResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message UserIdRequest {
  int32 user_id = 1;
}

message UserResponse {
  int32 user_id = 1;
  string email = 2;
}
